# HW_27

./: pyproject.toml
avito/: asgi.py  settings.py  urls.py  wsgi.py
