[tool.poetry]
name = "avito-project"
version = "0.1.0"
description = ""
authors = ["Стас <stas-lomaev@mail.ru>"]
readme = "README.md"
packages = [{include = "avito_project"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
